--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.14.1",
     "express": "~3.2.4",
     "jade": "^1.11.0",
-    "socket.io": "~0.9.14"
+    "socket.io": "~0.9.14",
+    "stylus": "^0.52.4"
   }
 }
